STOP relying on MediaMTX's recorder. Instead, make a new one from scratch?

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "^1.3.9",
-    "@types/node": "^24",
+    "@types/node": "^25.3.2",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -39,6 +40,7 @@
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "prisma": "^7.4.1",
     "svelte": "^5.48.2",
     "svelte-adapter-bun": "^1.0.1",
     "svelte-check": "^4.3.5",
@@ -49,8 +51,12 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@fontsource/ibm-plex-sans": "^5.2.8",
+    "@prisma/adapter-better-sqlite3": "^7.4.1",
+    "@prisma/adapter-libsql": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "better-sqlite3": "^12.6.2",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.3.1",
     "hls.js": "^1.6.15",
     "pm2": "^6.0.14",
     "puppeteer": "^24.37.2",
